# cognitive-toolworks

./: .gitignore  .pre-commit-config.yaml  =3.6  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  project_plan.md  pyproject.toml
.github/workflows/: quality.yaml  skills-ci.yaml
agents/agent-creator/: AGENT.md  CHANGELOG.md  MIGRATION.md
agents/architecture-decision-orchestrator/: AGENT.md  CHANGELOG.md
agents/aws-cloud-architect/: AGENT.md  CHANGELOG.md
agents/cloud-aws-orchestrator/: AGENT.md
agents/cloud-azure-orchestrator/: AGENT.md  CHANGELOG.md
agents/cloud-gcp-orchestrator/: AGENT.md  CHANGELOG.md
agents/cloud-native-orchestrator/: AGENT.md  CHANGELOG.md  MIGRATION.md
agents/compliance-orchestrator/: AGENT.md  CHANGELOG.md  MIGRATION.md
agents/cost-optimization-orchestrator/: AGENT.md  CHANGELOG.md
agents/database-migration-orchestrator/: AGENT.md  CHANGELOG.md
agents/design-system-builder/: AGENT.md  CHANGELOG.md
agents/devops-pipeline-orchestrator/: AGENT.md  CHANGELOG.md  MIGRATION.md
agents/disaster-recovery-orchestrator/: AGENT.md  CHANGELOG.md
agents/incident-response-orchestrator/: AGENT.md  CHANGELOG.md
agents/multi-region-orchestrator/: AGENT.md  CHANGELOG.md
agents/observability-orchestrator/: AGENT.md  CHANGELOG.md
agents/performance-orchestrator/: AGENT.md  CHANGELOG.md
agents/security-auditor/: AGENT.md  CHANGELOG.md  MIGRATION.md
agents/testing-orchestrator/: AGENT.md  CHANGELOG.md
docs/: AGENT_DEPENDENCIES.md  COVERAGE_MATRIX.md  EXPANSION_ROADMAP.md
docs/historical/: REFACTORING_SUMMARY_PHASE1-3.md
index/: agents-index.json  skills-index.json
index/embeddings/: README.md  metadata.json  slugs.json  vectorizer.pkl  vectors.pkl
skills/agent-creation/: SKILL.md
skills/api-contract-testing/: SKILL.md
skills/api-design-validator/: CHANGELOG.md  SKILL.md  index-entry.json
skills/api-graphql-designer/: CHANGELOG.md  SKILL.md
skills/appsec-validator/: SKILL.md
skills/architecture-decision-framework/: CHANGELOG.md  SKILL.md  index-entry.json
skills/aws-multi-service-architect/: SKILL.md  index-entry.json
skills/chaos-engineering-designer/: CHANGELOG.md  SKILL.md
skills/cicd-pipeline-generator/: SKILL.md
skills/cloud-aws-architect/: CHANGELOG.md  SKILL.md
skills/cloud-edge-architect/: SKILL.md  index-entry.json
skills/cloud-kubernetes-integrator/: CHANGELOG.md  SKILL.md
skills/cloud-multicloud-advisor/: CHANGELOG.md  SKILL.md  index-entry.json
skills/cloud-native-deployment-orchestrator/: CHANGELOG.md  SKILL.md  index-entry.json
skills/cloud-platform-integrator/: SKILL.md
skills/cloud-serverless-designer/: CHANGELOG.md  SKILL.md
skills/cloudsec-posture-analyzer/: SKILL.md
skills/codex-cli-delegator/: CHANGELOG.md  SKILL.md
skills/coding-standards-polyglot/: CHANGELOG.md  SKILL.md  index-entry.json
skills/compliance-automation-engine/: CHANGELOG.md  SKILL.md  index-entry.json
skills/compliance-fedramp-validator/: CHANGELOG.md  SKILL.md
skills/compliance-oscal-validator/: CHANGELOG.md  SKILL.md
skills/container-image-optimizer/: CHANGELOG.md  SKILL.md
skills/container-security-checker/: CHANGELOG.md  SKILL.md
skills/content-documentation-generator/: SKILL.md  index-entry.json
skills/core-agent-authoring/: CHANGELOG.md  SKILL.md  index-entry.json
skills/core-codex-delegator/: CHANGELOG.md  SKILL.md  index-entry.json
skills/core-gemini-delegator/: CHANGELOG.md  SKILL.md
skills/core-skill-authoring/: CHANGELOG.md  SKILL.md
skills/cost-optimization-analyzer/: SKILL.md
skills/cryptosec-validator/: SKILL.md
skills/data-engineering-pipeline-designer/: CHANGELOG.md  SKILL.md  index-entry.json
skills/data-pipeline-designer/: SKILL.md
skills/database-migration-generator/: CHANGELOG.md  SKILL.md
skills/database-optimization-analyzer/: CHANGELOG.md  SKILL.md  index-entry.json
skills/database-schema-designer/: CHANGELOG.md  SKILL.md
skills/db-migration-generator/: SKILL.md
skills/deployment-strategy-designer/: SKILL.md
skills/devops-cicd-generator/: CHANGELOG.md  SKILL.md
skills/devops-deployment-designer/: CHANGELOG.md  SKILL.md
skills/devops-drift-detector/: SKILL.md
skills/devops-iac-generator/: SKILL.md
skills/devops-pipeline-architect/: CHANGELOG.md  SKILL.md  index-entry.json
skills/documentation-content-generator/: CHANGELOG.md  SKILL.md
tests/: evals_agent-creation.yaml  evals_api-contract-testing.yaml  evals_api-design-validator.yaml  evals_api-graphql-designer.yaml  evals_architecture-decision-framework.yaml  evals_aws-multi-service-architect.yaml  evals_chaos-engineering-designer.yaml  evals_cloud-edge-architect.yaml  evals_cloud-multicloud-advisor.yaml  evals_cloud-native-deployment-orchestrator.yaml  evals_coding-standards-polyglot.yaml  evals_compliance-automation-engine.yaml  evals_compliance-fedramp-validator.yaml  evals_compliance-oscal-validator.yaml  evals_content-documentation-generator.yaml  evals_core-codex-delegator.yaml  evals_core-gemini-delegator.yaml  evals_cost-optimization-analyzer.yaml  evals_data-engineering-pipeline-designer.yaml  evals_database-optimization-analyzer.yaml  evals_database-schema-designer.yaml  evals_db-migration-generator.yaml  evals_devops-pipeline-architect.yaml  evals_e2e-testing-generator.yaml  evals_frontend-framework-advisor.yaml  evals_go-project-scaffolder.yaml  evals_incident-response-playbook-generator.yaml  evals_infrastructure-drift-detector.yaml  evals_integration-messagequeue-designer.yaml  evals_integration-testing-designer.yaml  evals_load-testing-designer.yaml  evals_microservices-pattern-architect.yaml  evals_mlops-lifecycle-manager.yaml  evals_mobile-cicd-generator.yaml  evals_python-tooling-specialist.yaml  evals_rust-analyzer.yaml  evals_secrets-management-integrator.yaml  evals_security-assessment-framework.yaml  evals_skill-creation.yaml  evals_slo-validator.yaml  (+12 more)
tooling/: analyze_agent_dependencies.py  analyze_coverage.py  build_embeddings.py  build_index.py  init_repo_structure.py  lint_skill.py  route_skills.py  validate_skill.py
(+290 files in other folders)
